add get requests
